    * 0166 FIX: mobile gui: Fixed colors of command list...
    * 0820 FIX: Fixed wrong NagVis links in "custom links" snapin
    * 0938 FIX: logwatch: fixed incorrect display of warning messages
    * 0939 FIX: Fixed multisite exception caused by missing explanation text for a AUTODELETE event action
    * 0822 FIX: Sorting columns in view dashlets is now working again

    WATO:
    * 0987 New button for updating DNS cache...
    * 0824 SEC: Valuespecs: Fixed several possible HTML injections in valuespecs...
    * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...
    * 0935 FIX: CPU utilization: increased maximum value to 10000...
    * 0821 FIX: Reducing size of auth.php (needed for authorisation in NagVis) in large environments...

    Notifications:
    * 1002 FIX: Fix crash when debugging notifications with non-Ascii characters...

    Reporting & Availability:
    * 0985 Availability: display phases of freqent state changes as "chaos"...

    Event Console:
    * 0816 States of events can now be set by patterns...

    HW/SW-Inventory:
    * 0620 new version of Check_MKs hardware and software inventory including a much extended windows agent and inventory functions
    * 0818 FIX: Fixed exception in HW/SW inventory search dialog...


1.2.5i3:
    Core & Setup:
    * 0884 New options --oid and --extraoid for cmk --snmpwalk...
    * 0785 FIX: Availability: fixed memory leak in table statehist...
    * 0903 FIX: availability: fixed bug causing the availability feature not considering timeperiod transitions
    * 0888 FIX: Fix SNMP inventory check in simulation mode

    Checks & Agents:
    * 0149 cisco_secure: New check for Port Security on Cisco swichtes
    * 0751 New localcheck for Linux that makes sure that filesystems in /etc/fstab are mounted...
    * 0783 enterasys_lsnat: new check monitoring the current LSNAT bindings
    * 0601 printer_alerts: check can now display a textual representation of the alert code...