@@ -32,6 +32,8 @@
     * 0822 FIX: Sorting columns in view dashlets is now working again
 
     WATO:
+    * 0984 Fix code injection for logged in users via automation url...
+            NOTE: Please refer to the migration notes!
     * 0987 New button for updating DNS cache...
     * 0824 SEC: Valuespecs: Fixed several possible HTML injections in valuespecs...
     * 0813 FIX: LDAP: Improved slightly missleading logging of LDAP sync actions...
